--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Snake Game</title>
+    <!--<link rel="stylesheet" type="text/css" href=".css"> -->
     <link rel="stylesheet" type="text/css" href="css/bootsrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootsrap.min.css">
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
@@ -14,23 +15,23 @@
     <script src="script.js" type="text/javascript"></script>
 </head>
 <body>
-    <div class="container">
-        <div id="overlay">
-             FINAL SCORE: <span id="final_score"></span>
+    <div class="container " >
+        <!--<div id="overlay">
+             FINAL SCORE: <span id="final_score"></span> 
             <br>
             <a onClick="window.location.reload()" href="#">Click TO Play Again</a>
-        </div>
+        </div> -->
 
     <!-- Lets make a simple snake game -->
     <canvas id="canvas" width="1000" height="600">
     Sorry, This Browser does not support canvas element.
     </canvas>
 
-    <div id="stats">
+   <!-- <div id="stats">
              <div class="score"></div>
              <div class="score"></div>
              <button onClick="resetScore()" id="reset_score">Reset High Score</button>
-        </div>
+        </div> -->
     </div>    
     
     
