Updated Index.html (border changes)

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div> -->
 
     <!-- Lets make a simple snake game -->
-    <canvas id="canvas" width="1000" height="600">
+    <canvas id="canvas" width="1000" height="600" style="border:8px solid #000000;">
     Sorry, This Browser does not support canvas element.
     </canvas>
 
